# celeste-embeddings

./: .env.example  LICENSE  README.md  pyproject.toml
Notebooks/: hello_world.ipynb
src/celeste_embedding/: __init__.py  base.py
src/celeste_embedding/core/: __init__.py  enums.py  types.py
src/celeste_embedding/providers/: google.py
src/celeste_embeddings/: __init__.py  mapping.py
src/celeste_embeddings/core/: __init__.py  enums.py  types.py
src/celeste_embeddings/providers/: google.py  mistral.py
