[project]
name = "celeste-embeddings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=0.1.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.8.2",
    "notebook>=7.4.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff]
# Set a line length that suits your project. 88 is a common default.
line-length = 88
# Assume a target Python version.
target-version = "py313"

[tool.ruff.lint]
# Enable a broad set of rules by default.
# "E" (pycodestyle errors), "W" (pycodestyle warnings), "F" (Pyflakes)
# "I" (isort), "ANN" (flake8-annotations), "B" (flake8-bugbear),
# "C4" (flake8-comprehensions), "T20" (flake8-print)
select = ["E", "W", "F", "I", "ANN", "B", "C4", "T20"]

# You can add specific rules to ignore if needed.
# For example, some projects disable type checking in tests.
ignore = ["ANN401"]

# Enable autofix for all enabled rules.
fixable = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings, like Black.
quote-style = "double"
