[project]
name = "celeste-embeddings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "google-genai>=0.1.0",
    "pydantic>=2.8.2",
    "mistralai>=1.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "notebook>=7.4.4",
]

[tool.uv.sources]
celeste-core = { git = "https://github.com/celeste-kai/celeste-core.git" }
